refactor: simplifica CotacaoBcbAdapter removendo loop de fallback
O fallback por data agora é responsabilidade do CotacaoService.
O adapter volta a ser uma chamada direta ao BCB para uma única data,
lançando CotacaoIndisponiveException imediatamente se retornar vazio.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>