@@ -68,64 +68,12 @@ class CotacaoBcbAdapterTest {
     }
 
     @Test
-    @DisplayName("Should return cotação on first attempt when requested date has data available")
-    void shouldReturnCotacaoOnFirstAttemptWhenDateHasData() {
-        CotacaoBcbResponse response = new CotacaoBcbResponse(
-                List.of(new CotacaoBcbResponse.CotacaoItem(new BigDecimal("5.10")))
-        );
-        when(responseSpec.body(CotacaoBcbResponse.class)).thenReturn(response);
+    @DisplayName("Should throw CotacaoIndisponiveException when BCB returns empty array")
+    void shouldThrowCotacaoIndisponiveExceptionWhenBcbReturnsEmptyArray() {
+        when(responseSpec.body(CotacaoBcbResponse.class))
+                .thenReturn(new CotacaoBcbResponse(Collections.emptyList()));
 
-        BigDecimal result = adapter.getCotacaoDolar(LocalDate.of(2024, 3, 18));
-
-        assertThat(result).isEqualByComparingTo(new BigDecimal("5.10"));
-        //noinspection unchecked
-        verify(requestSpec, times(1)).uri(anyString());
-    }
-
-    @Test
-    @DisplayName("Should return previous day cotação when requested date has no data")
-    void shouldReturnPreviousDayCotacaoWhenRequestedDateHasNoData() {
-        CotacaoBcbResponse empty = new CotacaoBcbResponse(Collections.emptyList());
-        CotacaoBcbResponse withRate = new CotacaoBcbResponse(
-                List.of(new CotacaoBcbResponse.CotacaoItem(new BigDecimal("5.05")))
-        );
-        when(responseSpec.body(CotacaoBcbResponse.class)).thenReturn(empty, withRate);
-
-        BigDecimal result = adapter.getCotacaoDolar(LocalDate.of(2024, 3, 19));
-
-        assertThat(result).isEqualByComparingTo(new BigDecimal("5.05"));
-        //noinspection unchecked
-        verify(requestSpec, times(2)).uri(anyString());
-    }
-
-    @Test
-    @DisplayName("Should walk back multiple days until finding cotação when Saturday and Sunday have no data")
-    void shouldWalkBackMultipleDaysWhenConsecutiveDatesHaveNoCotacao() {
-        CotacaoBcbResponse empty = new CotacaoBcbResponse(Collections.emptyList());
-        CotacaoBcbResponse friday = new CotacaoBcbResponse(
-                List.of(new CotacaoBcbResponse.CotacaoItem(new BigDecimal("5.00")))
-        );
-        // Sunday → empty, Saturday → empty, Friday → has data
-        when(responseSpec.body(CotacaoBcbResponse.class)).thenReturn(empty, empty, friday);
-
-        BigDecimal result = adapter.getCotacaoDolar(LocalDate.of(2024, 3, 17)); // Sunday
-
-        assertThat(result).isEqualByComparingTo(new BigDecimal("5.00"));
-        //noinspection unchecked
-        verify(requestSpec, times(3)).uri(anyString());
-    }
-
-    @Test
-    @DisplayName("Should throw CotacaoIndisponiveException after 7 consecutive days without data")
-    void shouldThrowCotacaoIndisponiveExceptionAfterSevenFailedAttempts() {
-        CotacaoBcbResponse empty = new CotacaoBcbResponse(Collections.emptyList());
-        when(responseSpec.body(CotacaoBcbResponse.class)).thenReturn(
-                empty, empty, empty, empty, empty, empty, empty
-        );
-
-        assertThatThrownBy(() -> adapter.getCotacaoDolar(LocalDate.of(2024, 3, 17)))
+        assertThatThrownBy(() -> adapter.getCotacaoDolar(LocalDate.of(2024, 3, 15)))
                 .isInstanceOf(CotacaoIndisponiveException.class);
-        //noinspection unchecked
-        verify(requestSpec, times(7)).uri(anyString());
     }
 }
